--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port=3003",
+    "dev": "next dev --turbopack --port=3000",
     "build": "next build",
     "start": "next start"
   },
@@ -14,13 +14,15 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
     "@tanstack/react-form": "^1.12.3",
     "@tanstack/react-query": "^5.85.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.22",
-    "lucide-react": "^0.487.0",
+    "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
